# axum_poll

./: .gitignore  Cargo.toml  LICENSE.md  README.md
migrations/: 20220302024010_Initial_DB_Setup.sql
src/: db.rs  main.rs  poll.rs  routes.rs
src/templates/: all_polls.rs  greet.rs  mod.rs  single_poll.rs
templates/: all-polls.html  hello.html
