[package]
name = "axum_poll"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.4"
dotenv = "0.15.0"
parking_lot = "0.12"
sailfish = "0.3.3"
serde = { version = "1.0.130", features = ["derive"] }
sqlx = { version = "0.5.9", features = ["runtime-tokio-rustls", "sqlite"] }
structopt = "0.3.25"
tokio = { version = "1.13.0", features = ["full", "tracing"] }
tower = { version = "0.4.10", features = ["util", "timeout"] }
tower-http = { version = "0.2", features = ["add-extension", "trace"] }
tracing = "0.1.29"
tracing-subscriber = "0.3"
uuid = { version = "0.8", features = ["serde", "v4"] }
# quote = "1.0.15"

[patch.crates-io]
sailfish = { git = "https://github.com/jdrouet/sailfish.git", branch = "dependencies-proc-macro" }