[package]
name = "axum_poll"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
askama = "0.11"
axum = "0.5"
dotenvy = "0.15"
parking_lot = "0.12"
rusty_ulid = { version = "1", default-features = false, features = ["serde", "ulid-generation-time"] }
serde = { version = "1", features = ["derive"] }
sqlx = { version = "0.5", features = ["runtime-tokio-rustls", "sqlite"] }
structopt = "0.3"
tokio = { version = "1.13", features = ["full", "tracing"] }
tower = { version = "0.4", features = ["util", "timeout"] }
tower-http = { version = "0.3", features = ["add-extension", "trace"] }
tracing = "0.1"
tracing-subscriber = "0.3"
